fixing the maven build issue